--- a/.okta.env
+++ b/.okta.env
@@ -1,2 +1,2 @@
-ISSUER=https://discounttire-dev.oktapreview.com
+ISSUER=https://discounttire-dev.oktapreview.com/oauth2/default
 CLIENT_ID=0oa1ap4djkgPKgf8y0h8
