--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
-{
+{ "homepage":"http://Jvalekar1111.github.io/okta-demo", 
   "name": "dt-okta-login",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "start": "vite",
+	"predeploy" : "npm run build",
+    "deploy" : "gh-pages -d build",
     "build": "vite build",
     "test": "jest"
   },
@@ -29,6 +31,7 @@
     "@testing-library/user-event": "^14.4.3",
     "@vitejs/plugin-react": "^2.2.0",
     "dotenv": "^16.0.3",
+    "gh-pages": "^5.0.0",
     "jest": "^29.3.1",
     "jest-environment-jsdom": "^29.3.1",
     "vite": "^3.2.5"
