--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "dt-okta-login",
   "version": "0.1.0",
-  "private": false,
-  "homepage": "https://Jvalekar1111.github.io/okta-demo",
+  "private": true,
+  "homepage": "https://jvalekar1111.github.io/okta-demo/",
   "scripts": {
+	"predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "vite",
     "build": "vite build",
-    "test": "jest",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "test": "jest"   
   },
   "dependencies": {
     "@okta/okta-auth-js": "7.2.0",
@@ -55,4 +55,5 @@
       "<rootDir>/jest.setup.js"
     ]
   }
+
 }
